--- a/config/packages/framework.yml
+++ b/config/packages/framework.yml
@@ -1,6 +1,8 @@
 framework:
     secret: 'unused' # this is currently required by symfony but not actually in use
     session:
+        # https://symfony.com/doc/4.4/session/php_bridge.html
+        storage_id: session.storage.php_bridge
         handler_id: ~
     php_errors:
         log: true
