Use TypeScript for chat-server
The chat server now is TypeScript code. As of this commit, it's still
the same old non-object-oriented, non-explicitly-typed JS-style code,
but technically, it's TypeScript.

--- a/docker/docker-compose.dev.yml
+++ b/docker/docker-compose.dev.yml
@@ -86,9 +86,10 @@ services:
 
   chat:
     container_name: foodsharing_dev_chat
-    command: sh -c "yarn && node server.js 0.0.0.0"
     image: node:13.10.1-alpine
     working_dir: /app/chat
+    command: sh -c "yarn && npx tsc && node dist/server.js 0.0.0.0"
+    user: "node"
     depends_on:
       - redis
     environment:
