--- a/chat/package.json
+++ b/chat/package.json
@@ -13,10 +13,12 @@
     "test": "tape test.js | tap-spec"
   },
   "dependencies": {
+    "@types/node": "^13.13.2",
     "cookie": "^0.4.0",
     "randomstring": "^1.1.5",
     "redis": "^3.0.2",
     "socket.io": "^2.3.0",
+    "typescript": "^3.8.3",
     "url": "^0.11.0"
   },
   "devDependencies": {
