--- a/chat/package.json
+++ b/chat/package.json
@@ -13,11 +13,18 @@
     "test": "tape test.js | tap-spec"
   },
   "dependencies": {
+    "@types/cookie": "^0.3.3",
     "@types/node": "^13.13.2",
+    "@types/redis": "^2.8.18",
+    "@types/restify": "^8.4.2",
+    "@types/socket.io": "^2.1.4",
     "cookie": "^0.4.0",
     "randomstring": "^1.1.5",
-    "redis": "^3.0.2",
+    "reflect-metadata": "^0.1.13",
+    "restify": "^8.5.1",
     "socket.io": "^2.3.0",
+    "tedis": "^0.1.12",
+    "ts-node": "^8.9.1",
     "typescript": "^3.8.3",
     "url": "^0.11.0"
   },
@@ -28,6 +35,7 @@
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^4.0.1",
+    "node-dev": "^4.0.0",
     "request": "^2.88.2",
     "socket.io-client": "^2.3.0",
     "tap-spec": "^5.0.0",
