Enable strict null checks in TypeScript
Strict null checks make all type declarations not nullable, unless you
declare them nullable. That saves you from doing null checks all over
your code, because the null checks can be done at compile time.

--- a/chat/tsconfig.json
+++ b/chat/tsconfig.json
@@ -4,6 +4,7 @@
     "removeComments": true,
     "preserveConstEnums": true,
     "noImplicitAny": true,
+    "strictNullChecks": true,
     "experimentalDecorators": true,
     "typeRoots": ["./node_modules/@types"],
     "outDir": "dist"
