--- a/chat/tsconfig.json
+++ b/chat/tsconfig.json
@@ -1,6 +1,7 @@
 {
   "compilerOptions": {
     "module": "commonjs",
+    "target": "ES5",
     "removeComments": true,
     "preserveConstEnums": true,
     "noImplicitAny": true,
