--- a/chat/package.json
+++ b/chat/package.json
@@ -19,6 +19,7 @@
     "@types/restify": "^8.4.2",
     "@types/socket.io": "^2.1.4",
     "cookie": "^0.4.0",
+    "eslint-config-standard-with-typescript": "^16.0.0",
     "randomstring": "^1.1.5",
     "reflect-metadata": "^0.1.13",
     "restify": "^8.5.1",
@@ -29,6 +30,8 @@
     "url": "^0.11.0"
   },
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^2.30.0",
+    "@typescript-eslint/parser": "^2.30.0",
     "eslint": "^6.8.0",
     "eslint-config-standard": "^14.1.0",
     "eslint-plugin-import": "^2.20.2",
