--- a/docker/docker-compose.dev.yml
+++ b/docker/docker-compose.dev.yml
@@ -88,7 +88,7 @@ services:
     container_name: foodsharing_dev_chat
     image: node:13.10.1-alpine
     working_dir: /app/chat
-    command: sh -c "yarn && yarn tsc && yarn node-dev dist/index.js 0.0.0.0"
+    command: sh -c "yarn && yarn ts-node-dev src/index.ts 0.0.0.0"
     user: "node"
     depends_on:
       - redis
