--- a/chat/package.json
+++ b/chat/package.json
@@ -10,7 +10,7 @@
   "scripts": {
     "lint": "eslint . --ext .ts",
     "fix": "eslint --fix . --ext .ts",
-    "test": "tape test.ts | tap-spec"
+    "test": "tsc && tsc test.ts && tape test.js | tap-spec"
   },
   "dependencies": {
     "@types/cookie": "^0.3.3",
@@ -30,6 +30,9 @@
     "url": "^0.11.0"
   },
   "devDependencies": {
+    "@types/randomstring": "^1.1.6",
+    "@types/socket.io-client": "^1.4.32",
+    "@types/superagent": "^4.1.7",
     "@types/tape": "^4.13.0",
     "@typescript-eslint/eslint-plugin": "^2.30.0",
     "@typescript-eslint/parser": "^2.30.0",
@@ -42,6 +45,8 @@
     "node-dev": "^4.0.0",
     "request": "^2.88.2",
     "socket.io-client": "^2.3.0",
+    "superagent": "^5.2.2",
+    "supertest": "^4.0.2",
     "tap-spec": "^5.0.0",
     "tape": "^4.13.2",
     "ts-node-dev": "^1.0.0-pre.44"
