Make tests run again
They're not all runing through successfully, as they still test against
the old API, but at least they run at all!

--- a/chat/package.json
+++ b/chat/package.json
@@ -10,7 +10,7 @@
   "scripts": {
     "lint": "eslint . --ext .ts",
     "fix": "eslint --fix . --ext .ts",
-    "test": "tsc && tsc test.ts && tape test.js | tap-spec"
+    "test": "tsc test.ts && tape test.js | tap-spec"
   },
   "dependencies": {
     "@types/cookie": "^0.3.3",
