Fix startup command for chat server also in ci Dockerfile

--- a/chat/docker/Dockerfile.chat.ci
+++ b/chat/docker/Dockerfile.chat.ci
@@ -6,6 +6,6 @@ WORKDIR /app/chat
 
 COPY package.json .
 
-RUN yarn && yarn tsc
+RUN yarn
 
-CMD ["node", "dist/index.js"]
+CMD ["yarn", "ts-node src/index.ts"]
