--- a/docker/docker-compose.ci.yml
+++ b/docker/docker-compose.ci.yml
@@ -88,6 +88,7 @@ services:
 
   chat:
     container_name: foodsharing_ci_chat
+    command: sh -c "yarn && yarn ts-node src/index.ts 0.0.0.0"
     build:
       context: ../chat
       dockerfile: docker/Dockerfile.chat.ci
