--- a/client/package.json
+++ b/client/package.json
@@ -8,7 +8,8 @@
     "clean-assets": "shx rm -rf ../assets",
     "build": "yarn clean-assets && NODE_ENV=production webpack",
     "dev": "yarn clean-assets && webpack-dev-server --hot --config serve.config.js",
-    "test": "node test"
+    "test": "node test",
+    "storybook": "start-storybook -p 18087"
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.13.0",
@@ -61,6 +62,7 @@
     "@vue/test-utils": "^1.0.0-beta.32",
     "babel-eslint": "^10.1.0",
     "babel-loader": "^8.0.6",
+    "babel-preset-vue": "^2.0.2",
     "css-loader": "^3.4.2",
     "dotenv": "^8.2.0",
     "eslint": "^7.0.0",
@@ -90,6 +92,11 @@
     "shx": "^0.3.2",
     "sinon": "<8.0.0",
     "style-loader": "^1.1.3",
+    "@storybook/vue": "^5.3.18",
+    "@storybook/addon-knobs": "^5.3.18",
+    "@storybook/addon-centered": "^5.3.18",
+    "@storybook/addon-viewport": "^5.3.18",
+    "@storybook/addon-a11y": "^5.3.18",
     "url-loader": "^4.0.0",
     "vue-eslint-parser": "^7.0.0",
     "vue-loader": "^15.9.1",
