add CI test run without need for docker-in-docker

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,3 +1,11 @@
+variables:
+  # https://docs.docker.com/engine/userguide/storagedriver/selectadriver/
+  # https://gitlab.com/gitlab-org/gitlab-ce/issues/19971
+  DOCKER_DRIVER: overlay
+  GIT_CLONE_PATH: $CI_BUILDS_DIR/app
+  MYSQL_ROOT_PASSWORD: root
+  TZ: Europe/Berlin
+
 .defaults: &defaults
   tags:
   - shared
@@ -191,6 +199,48 @@ test:
     paths:
     - tests/_output
 
+test:combined:
+  <<: *defaults
+  image: registry.gitlab.com/foodsharing-dev/images/ci_combined:1
+  services:
+    - name: redis:redis:5.0.8-alpine
+      alias: redis
+    - name: registry.gitlab.com/foodsharing-dev/images/db/dev:1.4
+      alias: db
+    - name: registry.gitlab.com/foodsharing-dev/images/selenium:1.4
+      alias: selenium
+    - name: djfarrelly/maildev
+      alias: maildev
+      command: ["bin/maildev",  "--web 80", "--smtp 25", "--hide-extensions STARTTLS"]
+
+      # only run tests for MR, not for the target branch. While this might show to be dangerous, it also allows us to
+  # deploy without relying on potentially flaky tests
+  rules:
+    - if: $CI_MERGE_REQUEST_ID
+    - if: $CI_PIPELINE_SOURCE == "schedule"
+      when: never
+  # run it on our foodsharing ci server
+  tags:
+    - non-shared
+  dependencies:
+    - build:frontend
+    - build:backend
+    - build:backend-chat
+  script:
+    - cp /app/docker/ci_combined/supervisor_chat.conf /etc/supervisor/conf.d/
+    - /start.sh &; sleep 2
+    - composer install --verbose --prefer-dist --no-progress --no-interaction --no-suggest --no-scripts --ignore-platform-reqs
+    - mysql -u root -p root -h db --execute="drop database if exists foodsharing; create database foodsharing"
+    - cat migrations/migrations/initial.sql migrations/static.sql migrations/27-profilchange.sql migrations/27-verify.sql migrations/incremental-* | mysql -u root -p root -h db
+    - vendor/bin/codecept run --xml --html
+  after_script:
+  # collect any test output
+  artifacts:
+    expire_in: 1 month
+    when: always
+    paths:
+      - tests/_output
+
 deploy:beta:
   <<: *deploy
   environment:
@@ -226,8 +276,3 @@ deploy:docs:
   - if: $CI_COMMIT_BRANCH == 'master'
   - if: $CI_PIPELINE_SOURCE == "schedule"
     when: never
-
-variables:
-  # https://docs.docker.com/engine/userguide/storagedriver/selectadriver/
-  # https://gitlab.com/gitlab-org/gitlab-ce/issues/19971
-  DOCKER_DRIVER: overlay
