--- a/docker/conf/ci_combined/supervisor_apps.conf
+++ b/docker/conf/ci_combined/supervisor_apps.conf
@@ -14,8 +14,8 @@ stopsignal=QUIT
 
 [program:mailqueuerunner]
 command=/usr/local/bin/php run.php Mails queueWorker
-environment=FS_ENV="test"
-directory=/app/chat
+environment=FS_ENV="ci"
+directory=/app
 autostart=true
 autorestart=true
 priority=10
