Configure web server address via env file

--- a/codeception.yml
+++ b/codeception.yml
@@ -50,3 +50,5 @@ modules:
             db: foodsharing
         \Helper\Maildev:
             url: http://maildev:80
+params:
+    - .codeception-env
