--- a/tests/acceptance.suite.yml
+++ b/tests/acceptance.suite.yml
@@ -11,7 +11,7 @@ modules:
         - Db
         - Asserts
         - \Helper\WebDriver:
-            url: 'http://web:8080/'
+            url: "%WEB_URL%"
             host: selenium
             port: 4444
             browser: chrome
