--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -228,6 +228,7 @@ test:combined:
     - build:backend-chat
   script:
     - cp docker/conf/ci_combined/supervisor_apps.conf /etc/supervisor/conf.d/
+    - cp .codeception-ci-env .codeception-env
     - sed -i "s#/app#$CI_BUILDS_DIR#g" /etc/supervisor/conf.d/supervisor_apps.conf
     - sed -i "s#/app#$CI_BUILDS_DIR#g" /usr/local/etc/php-fpm.d/fpm.conf
     - sed -i "s#/app#$CI_BUILDS_DIR#g" /etc/nginx/conf.d/default.conf
