--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -229,9 +229,9 @@ test:combined:
   script:
     - cp docker/conf/ci_combined/supervisor_apps.conf /etc/supervisor/conf.d/
     - cp .codeception.ci.env .codeception.env
-    - sed -i "s#/app#CI_PROJECT_DIR#g" /etc/supervisor/conf.d/supervisor_apps.conf
-    - sed -i "s#/app#CI_PROJECT_DIR#g" /usr/local/etc/php-fpm.d/fpm.conf
-    - sed -i "s#/app#CI_PROJECT_DIR#g" /etc/nginx/conf.d/default.conf
+    - sed -i "s#/app#$CI_PROJECT_DIR#g" /etc/supervisor/conf.d/supervisor_apps.conf
+    - sed -i "s#/app#$CI_PROJECT_DIR#g" /usr/local/etc/php-fpm.d/fpm.conf
+    - sed -i "s#/app#$CI_PROJECT_DIR#g" /etc/nginx/conf.d/default.conf
     - /start.sh &
     - composer install --verbose --prefer-dist --no-progress --no-interaction --no-suggest --no-scripts --ignore-platform-reqs
     - mysql -u root -proot -hdb --execute="drop database if exists foodsharing; create database foodsharing"
