--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -4,6 +4,7 @@ variables:
   DOCKER_DRIVER: overlay
   MYSQL_ROOT_PASSWORD: root
   TZ: Europe/Berlin
+  FF_NETWORK_PER_BUILD: 1
 
 .defaults: &defaults
   tags:
@@ -232,6 +233,7 @@ test:combined:
     - sed -i "s#/app#$CI_PROJECT_DIR#g" /etc/supervisor/conf.d/supervisor_apps.conf
     - sed -i "s#/app#$CI_PROJECT_DIR#g" /usr/local/etc/php-fpm.d/fpm.conf
     - sed -i "s#/app#$CI_PROJECT_DIR#g" /etc/nginx/conf.d/default.conf
+    - cat /etc/hosts || true
     - /start.sh &
     - composer install --verbose --prefer-dist --no-progress --no-interaction --no-suggest --no-scripts --ignore-platform-reqs
     - mysql -u root -proot -hdb --execute="drop database if exists foodsharing; create database foodsharing"
