execute code as www-data user

--- a/docker/conf/ci_combined/supervisor_apps.conf
+++ b/docker/conf/ci_combined/supervisor_apps.conf
@@ -2,6 +2,7 @@
 command=/usr/bin/yarn ts-node /app/chat/src/index.ts
 directory=/app/chat
 autostart=true
+user=www-data
 autorestart=true
 priority=10
 stdout_events_enabled=true
@@ -19,6 +20,7 @@ directory=/app
 autostart=true
 autorestart=true
 priority=10
+user=www-data
 stdout_events_enabled=true
 stderr_events_enabled=true
 stdout_logfile=/dev/stdout
