--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -237,7 +237,8 @@ test:combined:
     - sed -i "s#/app#$CI_PROJECT_DIR#g" /etc/nginx/conf.d/default.conf
     - mysql -u root -proot -hdb --execute="drop database if exists foodsharing; create database foodsharing"
     - cat migrations/initial.sql migrations/static.sql migrations/27-profilchange.sql migrations/27-verify.sql migrations/incremental-* | mysql -uroot -proot -hdb foodsharing
-    - chown -R www-data:www-data *
+    - chown -R www-data:www-data .
+    - chown -R www-data:www-data /var/www
     - apt-get update && apt-get install sudo
     - /start.sh &
     - sudo -u www-data composer install --verbose --prefer-dist --no-progress --no-interaction --no-suggest --no-scripts --ignore-platform-reqs
