--- a/docker/conf/ci_combined/supervisor_apps.conf
+++ b/docker/conf/ci_combined/supervisor_apps.conf
@@ -1,5 +1,5 @@
 [program:chat]
-command=/usr/bin/yarn --cache-folder=. ts-node /app/chat/src/index.ts
+command=node_modules/ts-node/dist/bin.js src/index.ts
 directory=/app/chat
 autostart=true
 user=www-data
