put variables on a more local scope

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,11 +2,6 @@ variables:
   # https://docs.docker.com/engine/userguide/storagedriver/selectadriver/
   # https://gitlab.com/gitlab-org/gitlab-ce/issues/19971
   DOCKER_DRIVER: overlay
-  MYSQL_ROOT_PASSWORD: root
-  TZ: Europe/Berlin
-  FF_NETWORK_PER_BUILD: 1
-  REDIS_HOST: redis
-  FS_ENV: ci
 
 .defaults: &defaults
   tags:
@@ -204,6 +199,12 @@ test:
 
 test:combined:
   <<: *defaults
+  variables:
+    MYSQL_ROOT_PASSWORD: root
+    TZ: Europe/Berlin
+    FF_NETWORK_PER_BUILD: 1
+    REDIS_HOST: redis
+    FS_ENV: ci
   image: registry.gitlab.com/foodsharing-dev/images/ci_combined:1
   services:
     - name: redis:5.0.8-alpine
