--- a/docker/docker-compose.ci.yml
+++ b/docker/docker-compose.ci.yml
@@ -41,6 +41,7 @@ services:
       - influxdb
     environment:
       FS_ENV: test
+      WEB_URL: http://web:8080/
     volumes:
       - selenium_downloads:/downloads
       - /dev/null:/usr/local/etc/php/conf.d/docker-php-ext-xdebug.ini
