Do test execution as in ci.test

--- a/docker/conf/ci_combined/supervisor_apps.conf
+++ b/docker/conf/ci_combined/supervisor_apps.conf
@@ -18,6 +18,7 @@ command=/usr/local/bin/php run.php Mails queueWorker
 environment=FS_ENV="ci"
 directory=/app
 autostart=true
+startretries=9999999999
 autorestart=true
 priority=10
 user=www-data
