Update maildev image, introduce custom SMTP port

--- a/config/packages/services.yml
+++ b/config/packages/services.yml
@@ -88,6 +88,7 @@ services:
         class: Swift_SmtpTransport
         arguments:
             - !php/const MAILER_HOST
+            - !php/const MAILER_PORT
 
     Swift_Mailer:
         class: Swift_Mailer
