--- a/docker/docker-compose.ci.yml
+++ b/docker/docker-compose.ci.yml
@@ -152,10 +152,10 @@ services:
   maildev:
     command: >
       bin/maildev
-        --web 80
-        --smtp 25
+        --web 1080
+        --smtp 1025
         --hide-extensions STARTTLS
-    image: djfarrelly/maildev
+    image: maildev/maildev
     container_name: foodsharing_ci_maildev
 
   influxdb:
