--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -214,9 +214,9 @@ test:combined:
       alias: db
     - name: selenium/standalone-chrome:3.141.59-20200515
       alias: selenium
-    - name: djfarrelly/maildev
+    - name: maildev/maildev
       alias: maildev
-      command: ["bin/maildev",  "--web", "80", "--smtp", "25", "--hide-extensions", "STARTTLS"]
+      command: ["bin/maildev",  "--web", "1080", "--smtp", "1025", "--hide-extensions", "STARTTLS"]
 
       # only run tests for MR, not for the target branch. While this might show to be dangerous, it also allows us to
   # deploy without relying on potentially flaky tests
